# ==========================================================================
# Copyright (C) 2022 Intel Corporation
#
# SPDX-License-Identifier: MIT
# ==========================================================================

# Intel® Query Processing Library (Intel® QPL)
# Build system

add_subdirectory(common)
add_subdirectory(generators)
add_subdirectory(hw_dispatcher)
